force-app/main/default/objects/Seat_Segment_Allocation__c/Seat_Segment_Allocation__c.object-meta.xml
<CustomObject>
    <label>Seat_Segment_Allocation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seat_Segment_Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>