force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Allocation_Status__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Status__c</fullName>
    <label>Allocation_Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>RAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>