force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Type__c</fullName>
    <label>Allocation_Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresh</fullName>
            </value>
            <value>
                <fullName>Reused</fullName>
            </value>
            <value>
                <fullName>Upgraded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>