force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Seat_Segment_Allocations</relationshipLabel>
    <relationshipName>Seat_Segment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>