force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Time__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Created_Date_Time</label>
    <type>DateTime</type>
</CustomField>