force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Journey_Date__c.field-meta.xml
<CustomField>
    <fullName>Journey_Date__c</fullName>
    <label>Journey_Date</label>
    <type>Date</type>
</CustomField>