force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Journey_Segment__c.field-meta.xml
<CustomField>
    <fullName>Journey_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Journey_Segment</label>
    <referenceTo>Journey_Segment__c</referenceTo>
    <relationshipLabel>Seat_Segment_Allocations</relationshipLabel>
    <relationshipName>Seat_Segment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>