force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <displayFormat>SSA-{00000000}</displayFormat>
    <label>Name</label>
    <type>AutoNumber</type>
</CustomField>