force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Passenger__c.field-meta.xml
<CustomField>
    <fullName>Passenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Passenger</label>
    <referenceTo>Passenger__c</referenceTo>
    <relationshipLabel>Seat_Segment_Allocations</relationshipLabel>
    <relationshipName>Seat_Segment_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>