force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Reallocation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reallocation_Notes__c</fullName>
    <label>Reallocation_Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>