force-app/main/default/objects/Seat_Segment_Allocation__c/fields/Seat__c.field-meta.xml
<CustomField>
    <fullName>Seat__c</fullName>
    <label>Seat</label>
    <referenceTo>Seat__c</referenceTo>
    <relationshipLabel>Seat_Segment_Allocations</relationshipLabel>
    <relationshipName>Seat_Segment_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>